# fastapi-test

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  dependencies.py  main.py  models.py
app/routes/: task_routes.py  user_routes.py
app/schemas/: task_schemas.py  user_schemas.py
app/services/: task_services.py  user_services.py
